[package]
name = "day13"
version = "0.1.0"
authors = ["Elmar Wachtmeester <elmar.wachtmeester@ing.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
intcode = { version="0.1.0", path="../intcode" }
